# 2025_Spring_Deep-Learning-Labs

./: .gitignore  README.md
Lab1/: main.py  run.sh
Lab2/: .python-version  report.tex  requirements.txt
Lab2/report/: 1_implementation.tex  2_preprocessing.tex  3_analyze.tex  4_execution.tex  5_discussion.tex  6_conclusion.tex
Lab2/src/: evaluate.py  inference.py  oxford_pet.py  train.py  utils.py  visualize_resnet34_unet.py  visualize_unet.py
Lab2/src/models/: __init__.py  resnet34_unet.py  unet.py
Lab3/: .python-version  inpainting.py  plot.py  training_transformer.py  utils.py
Lab3/faster-pytorch-fid/: fid_score_gpu.py
Lab3/models/: VQGAN_Transformer.py
Lab3/models/Transformer/modules/: layers.py
Lab3/report/: 1_introduction.tex  2_implementation.tex  3_experiment_results.tex  4_discussion.tex  report.tex
Lab4/: .python-version
Lab4/code/: Plot.py  Tester.py  Trainer.py
Lab4/code/modules/: modules.py
Lab4/report/: 1_introduction.tex  2_implementation.tex  3_analysis_and_discussion.tex  4_appendix.tex  report.tex
Lab5/: .python-version  config.yaml  dqn.py  models.py  pong-config-task3.yaml  pong-config.yaml  task1-cartpole.pt  test_model.py
Lab5/report/: 1_introduction.tex  2_implementation.tex  3_analysis_and_discussion.tex  report.tex
Lab6/: pyproject.toml
Lab6/annotation/: extra.json
Lab6/code/: dataloader.py  evaluator.py  train_ddpm.py
Lab6/report/: 1_introduction.tex  2_implementation.tex  3_analysis_and_discussion.tex  references.tex  report.tex
Lab7/: pyproject.toml
Lab7/code/: a2c.py  a2c_pendulum.py  model.py  ppo.py  ppo_pendulum.py  ppo_walker.py  test.py
Lab7/report/: 1_introduction.tex  2_implementation.tex  3_analysis_and_discussion.tex  4_appendices.tex  report.tex
