[project]
name = "lab7"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gymnasium[classic-control,mujoco,other]>=1.1.1",
    "imageio>=2.37.0",
    "mujoco>=3.3.2",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "wandb>=0.19.11",
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
